# KINO_GO

./: pyproject.toml
app/: .env  main.py  routes.py  schemas.py  services.py
app/auth/: auth_handler.py
