[tool.poetry]
name = "pythonproject-psql"
version = "0.1.0"
description = ""
authors = ["Mike Sobolev <gemex18@gmail.com>"]
readme = "README.md"
packages = [{include = "pythonproject_psql"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
